fix margin between articles on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,10 @@ nav li {
     padding: 0;
   }
 
+  .sub-article .one{
+    margin: 7px 0;
+  }
+
   .hero {
     padding: 7px;
   }
